--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -373,8 +373,9 @@ footer small {
 
 .m-panel {
   position: fixed;
-  inset: 0;            /* top:0; right:0; bottom:0; left:0 */
-  margin: auto;        /* centra horizontal y vertical */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   max-width: 480px;
   width: 92vw;
   background: #fff;
@@ -383,4 +384,5 @@ footer small {
   box-shadow: 0 24px 80px rgba(0,0,0,.25);
   z-index: 1001;
 }
+
 
