--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -397,7 +397,7 @@ footer small {
 .m-title{ margin:0 0 8px; font-size:18px; color:#0b1b46; font-weight: bold;}
 .m-text{ margin:0 0 16px; color:#475569; }
 
-.m-gif {
+.rocket-gif {
   width: 70px;
   display: block;
   margin: 0 auto 40px auto; 
