--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -82,7 +82,6 @@ body {
 .RN__left h1 {
   font-size: 50px;
   color: #fff;
-  margin-bottom: 32px;
   font-weight: bold;
 }
 
@@ -410,6 +409,9 @@ footer small {
   margin: 0 auto 40px auto; 
 }
 
+.RN__rayon {
+  width: 90%;
+}
 
 
 
