--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -416,6 +416,7 @@ footer small {
 .RN__rayonMobile {
   display: none;         
   width: 90%;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 768px) {
